Fix on inputs wrap legend

--- a/styles/inputs/inputsWrap.pcss
+++ b/styles/inputs/inputsWrap.pcss
@@ -6,7 +6,7 @@
     font-weight: bold;
 
     &:not(:empty) {
-      display: initial;
+      display: flex;
       line-height: 1.43;
       margin-bottom: 0.5em;
     }
